# Picture-Perfect-Challenge

./: .gitignore  README.md  docker-compose.yaml  otel-collector-config.yaml
.claude/: settings.local.json
data/: generate_reference_images.py  prompts.json  prompts_1.json
data/output/: negative_prompt_1.txt  negative_prompt_10.txt  negative_prompt_11.txt  negative_prompt_12.txt  negative_prompt_13.txt  negative_prompt_14.txt  negative_prompt_15.txt  negative_prompt_16.txt  negative_prompt_17.txt  negative_prompt_18.txt  negative_prompt_19.txt  negative_prompt_2.txt  negative_prompt_20.txt  negative_prompt_3.txt  negative_prompt_4.txt  negative_prompt_5.txt  negative_prompt_6.txt  negative_prompt_7.txt  negative_prompt_8.txt  negative_prompt_9.txt  prompt_1.txt  prompt_10.txt  prompt_11.txt  prompt_12.txt  prompt_13.txt  prompt_14.txt  prompt_15.txt  prompt_16.txt  prompt_17.txt  prompt_18.txt  prompt_19.txt  prompt_2.txt  prompt_20.txt  prompt_3.txt  prompt_4.txt  prompt_5.txt  prompt_6.txt  prompt_7.txt  prompt_8.txt  prompt_9.txt
image-gen/: .env.example  BATCHING.md  CACHING_GUIDE.md  Dockerfile  MULTI_GPU_GUIDE.md  SD35_GUIDE.md  STARTUP_TROUBLESHOOTING.md  check_startup.sh  requirements.txt  test_batching.py
image-gen-flux-schnell/: Dockerfile  requirements.txt  test_batching.py
image-gen/app/: main.py  (+2 more)
image-similarity/: Dockerfile  README.md  __init__.py  pyproject.toml  pytest.ini  requirements.txt
image-similarity/app/: __init__.py  api.py  config.py  model.py  preprocessing.py  schemas.py
image-similarity/scripts/: benchmark.py
image-similarity/tests/: test_api.py  test_e2e.py  test_model.py  test_preprocessing.py
logic-service/: Dockerfile  requirements.txt
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
(+124 files in other folders)
